hphp/hack/test/typecheck/pending_if10.php.exp
File "pending_if10.php", line 7, characters 10-11:
Variable `$x` is undefined, or not always defined. (Naming[2050])
  File "pending_if10.php", line 3, characters 29-30:
  Did you mean `$c` instead?
